--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
           <img src="" alt="" />
           <h1>Kreativ frontend utvikler med variert bakgrund</h1>
 
-          <span>
+          <span class="section_content">
             <h3>Ønsket stillingstittel:</h3>
             <p>Frontend Developer / Fullstack Developer</p>
           </span>
 
-          <span>
+          <span class="section_content">
             <h3>Kan starte:</h3>
-            <p>Nå, men vil helst starte 8. mai</p>
+            <p>Snarest / 8. mai</p>
           </span>
         </section>
 
@@ -102,8 +102,8 @@
 
         <section>
           <h2>Arbeids erfaring</h2>
-          <p>Teknisk tegner / konstruktør: Systemblokk(2015 - 2019)</p>
-          <p>Teknisk tegner: Bakaas Cad Consult</p>
+          <p>(2019 - Nå) Teknisk tegner: Bakaas Cad Consult</p>
+          <p>(2016 - 2020) Teknisk tegner / konstruktør: Systemblokk</p>
         </section>
 
         <section>
@@ -124,18 +124,26 @@
           </p>
         </section>
 
+        <section></section>
+      </main>
+
+      <aside>
+        <img src="" alt="" />
+
         <section>
-          <h2>Hobby og interesser</h2>
+          <h2>Spørmål om søker?</h2>
+          <h3>Kontakt info</h3>
+          <p>Johnny@bakaas-cadconsult.no</p>
+          <p>907 32 947</p>
+        </section>
 
-          <p>Design:</p>
+        <section class="referanser">
+          <h2>Referanser</h2>
 
-          <p>Bil:</p>
-
-          <p>Trening:</p>
-
-          <p>Gaming:</p>
-
-          <p>k</p>
+          <h3>Gunnar</h3>
+          <p>Stilling:</p>
+          <p>Epost:</p>
+          <p>Tlf: 40692340</p>
         </section>
 
         <section>
@@ -144,6 +152,7 @@
           <h3>Programering</h3>
           <ul>
             <li>HTML, CSS og JS</li>
+            <li>THREE.js</li>
             <li>Node</li>
             <li>GitHub</li>
             <li>Java</li>
@@ -162,25 +171,14 @@
             <li>Morsmål: Norsk</li>
             <li>Skriver og snakker engelsk flytende</li>
           </ul>
-        </section>
-      </main>
 
-      <aside>
-        <img src="" alt="" />
-
-        <section>
-          <h2>Spørmål om søker?</h2>
-          <h3>Kontakt info</h3>
-          <p>Johnny@bakaas-cadconsult.no</p>
-        </section>
-
-        <section class="referanser">
-          <h2>Referanser</h2>
-
-          <h3>Gunnar</h3>
-          <p>Stilling:</p>
-          <p>Epost:</p>
-          <p>Tlf:</p>
+          <h3>Hobby / Interesser</h3>
+          <ul>
+            <li>Desing</li>
+            <li>Bil</li>
+            <li>Løfting</li>
+            <li>Gaming</li>
+          </ul>
         </section>
 
         <section>
