--- a/index.html
+++ b/index.html
@@ -70,21 +70,23 @@
           <p>Frontend Developer</p>
         </nav>
 
+        <!-- Intro -->
         <section>
           <img src="" alt="" />
           <h1>Kreativ frontend utvikler med variert bakgrund</h1>
 
           <span class="section_content">
-            <h3>Ønsket stillingstittel:</h3>
-            <p>Frontend Developer / Fullstack Developer</p>
+            <h3>Ønsket stilling:</h3>
+            <p>Utvikler</p>
           </span>
 
           <span class="section_content">
             <h3>Kan starte:</h3>
-            <p>Snarest / 8. mai</p>
+            <p>Snarest</p>
           </span>
         </section>
 
+        <!-- About me -->
         <section>
           <h2>Om meg</h2>
           <p>
@@ -100,12 +102,7 @@
           </p>
         </section>
 
-        <section>
-          <h2>Arbeids erfaring</h2>
-          <p>(2019 - Nå) Teknisk tegner: Bakaas Cad Consult</p>
-          <p>(2016 - 2020) Teknisk tegner / konstruktør: Systemblokk</p>
-        </section>
-
+        <!-- Projects -->
         <section>
           <h2>Prosjekter</h2>
           <p>
@@ -124,7 +121,73 @@
           </p>
         </section>
 
-        <section></section>
+        <!-- Work experience -->
+        <section class="history">
+          <h2>Arbeids erfaring</h2>
+
+          <section>
+            <h3>(2019 - Nå) Teknisk tegner: Bakaas Cad Consult</h3>
+            <p>
+              I min rolle som teknisk tegner hos Bakaas Cad Consult produserer
+              og oppdaterer jeg plantegninger og fag tegninger. En stor del av
+              arbeids dagen betår av tegning, fil behandling, organisjon og
+              komunikasjon med kunder.
+            </p>
+          </section>
+
+          <section>
+            <h3>(2016 - 2020) Teknisk tegner / konstruktør: Systemblokk</h3>
+            <p>
+              Hos Systemblokk jobbet jeg tett på prosjetk ledere, arkitekter,
+              enginører, produksjons lederen og fabrikk arbeidere. Hverdagen min
+              besto hovedsakelig av selvstendig arbeid, komunisere med
+              medarbeidere, modellering og produksjon av produksjons tegninger
+            </p>
+          </section>
+        </section>
+
+        <!-- Education -->
+        <section class="history">
+          <h2>Utdanning</h2>
+
+          <section>
+            <h3>(2022 - 2023) GET Academy</h3>
+
+            <p>
+              Gjennom utdannelse min på GET Academy har jeg utviklet en
+              grunnlegende og solid kompetanse innenfor webutvikling, med
+              spesielt fokus på HTML, CSS og Javascript. Jeg har også lært å
+              anvende design patterns som MVC og prinsipper som DRY for å skape
+              moderne og funksjonelle nettsider.
+            </p>
+            <p>
+              Med denne bakgrunnen har jeg ett godt utgangspunkt til å bli ett
+              nyttig og produktivt medlem av ett hvert team.
+            </p>
+          </section>
+
+          <section>
+            <h3>(2021 - 2022) Automasjon Vg2</h3>
+            <p>
+              Dette var hvor jeg fant min interesse for programering. Dette
+              førte til en sommer hvor jeg lærte meg hvordan programmere med
+              Java og deretter at jeg startet på GET Academt.
+            </p>
+          </section>
+
+          <section>
+            <h3>(2016 - 2017) Elektro Vg2</h3>
+            <p>
+              Etter ett havlt år fant jeg ut at jeg ikke var intresert i å være
+              en elektrikker og jeg var heldig nokk til å få ett jobb tilbud fra
+              Systemblokk der jeg hadde sommer jobb
+            </p>
+          </section>
+
+          <section>
+            <h3>(2015 - 2016) Elektro Vg1</h3>
+          </section>
+        </section>
       </main>
 
       <aside>
@@ -134,16 +197,15 @@
           <h2>Spørmål om søker?</h2>
           <h3>Kontakt info</h3>
           <p>Johnny@bakaas-cadconsult.no</p>
-          <p>907 32 947</p>
+          <p>Tlf: 907 32 947</p>
         </section>
 
-        <section class="referanser">
+        <section class="referanse">
           <h2>Referanser</h2>
-
-          <h3>Gunnar</h3>
-          <p>Stilling:</p>
-          <p>Epost:</p>
-          <p>Tlf: 40692340</p>
+          <h3>Gunnar Gravdal Aasland</h3>
+          <p>Stilling: Produksjons skjef</p>
+          <p>Epost: gunnar@systemblokk.no</p>
+          <p>Tlf: 406 92 340</p>
         </section>
 
         <section>
@@ -153,7 +215,7 @@
           <ul>
             <li>HTML, CSS og JS</li>
             <li>THREE.js</li>
-            <li>Node</li>
+            <li>Node.js</li>
             <li>GitHub</li>
             <li>Java</li>
             <li>SQL</li>
@@ -169,12 +231,12 @@
           <h3>Språk</h3>
           <ul>
             <li>Morsmål: Norsk</li>
-            <li>Skriver og snakker engelsk flytende</li>
+            <li>Flytende i engelsk</li>
           </ul>
 
           <h3>Hobby / Interesser</h3>
           <ul>
-            <li>Desing</li>
+            <li>Design</li>
             <li>Bil</li>
             <li>Løfting</li>
             <li>Gaming</li>
@@ -190,6 +252,8 @@
         </section>
       </aside>
     </div>
+
+    <footer></footer>
 
     <script src="main.js" async defer></script>
   </body>
