Lagt inn linker

--- a/index.html
+++ b/index.html
@@ -112,12 +112,15 @@
           </p>
 
           <p>
-            <a href="">Spill</a>
+            <a href="https://johnnybakaas.github.io/Snake-med-JS/">Snake</a>
           </p>
 
           <p>
-            <a href="">Buble-sort visualisering</a> ADVARSEL dette prosjektet
-            har en stor memory leak.
+            <a
+              href="https://johnnybakaas.github.io/three.js-Test/vite-project/dist/"
+              >Buble-sort visualisering</a
+            >
+            ADVARSEL dette prosjektet har en stor memory leak.
           </p>
         </section>
 
