--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
           <p>
             <a
               href="https://johnnybakaas.github.io/three.js-Test/vite-project/dist/"
-              >Buble-sort visualisering</a
+              >Bubble-sort visualisering</a
             >
             ADVARSEL dette prosjektet har en stor memory leak.
           </p>
