--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <!-- Intro -->
         <section>
           <img src="" alt="" />
-          <h1>Kreativ frontend utvikler med variert bakgrund</h1>
+          <h1>Kreativ Fullstack utvikler med variert bakgrunn</h1>
 
           <span class="section_content">
             <h3>Ønsket stilling:</h3>
@@ -91,37 +91,54 @@
           <h2>Om meg</h2>
           <p>
             Jeg er en dreven ung kar med mye variert erfaring. Jeg har 5 års
-            erfaring som teknisk tegner, men ønskier nå å gjøre en kariære
+            erfaring som teknisk tegner, men ønsker nå å gjøre en karriere
             endring.
           </p>
 
           <p>
-            Jeg har nå drivet med programering i litt over ett halvt år. Jeg har
-            jobbet med Java og Python, men har drivet absolut mest med HTML, CSS
-            og Java Script.
+            Jeg har nå drevet med programmering i litt over ett år. Jeg har
+            jobbet aller mest med HTML, CSS, Javascript, C#/.NET, React,
+            TypeScript og SQL, men også eksperimentert med Java, Rust, Python og
+            THREE.js.
           </p>
         </section>
 
         <!-- Projects -->
         <section>
           <h2>Prosjekter</h2>
-          <p>
-            <a href="https://telemarkinterior.no/Expremi/index.html"
-              >Telemark interior</a
-            >
-          </p>
+          <section>
+            <h3>Circles</h3>
+            <p>
+              Circles er mitt nåværende prosjekt. Jeg tok inspirasjon fra et
+              konsept lansert i Google+ som virket interessant å utvikle.
+            </p>
+            <p>
+              Dette prosjektet blir designet med backend som microservices. Per
+              nå er hele backenden skrevet i C#, men det ligger i planene å
+              implementere et par av APIene i Rust og muligens Python eller
+              Java.
+            </p>
+            <p>
+              Frontenden er skrevet i React og TypeScript med CSS moduler for
+              styling, React Router for routing og Axios for nettverk requests,
+              npm for package management og Vite som build tool
+            </p>
+          </section>
 
-          <p>
-            <a href="https://johnnybakaas.github.io/Snake-med-JS/">Snake</a>
-          </p>
-
-          <p>
-            <a
-              href="https://johnnybakaas.github.io/three.js-Test/vite-project/dist/"
-              >Bubble-sort visualisering</a
-            >
-            ADVARSEL dette prosjektet har en stor memory leak.
-          </p>
+          <section>
+            <h3>DWG Auto Publisher</h3>
+            <p>
+              I dette prosjektet har jeg kombinert min expertise for AutoCad med
+              min lidenskap for programmering. I dette prosjektet måtte jeg
+              implementere mitt eget AutoCad bibliotek, samkjøre backend med
+              frontend og jeg lærte mye på veien.
+            </p>
+            <p>
+              Stacken: Frontend: React. Backend: C#/.NET. Database: Microsoft
+              SQL Server. <br />
+              DWG: AutoCAD Core Console.
+            </p>
+          </section>
         </section>
 
         <!-- Work experience -->
@@ -133,18 +150,18 @@
             <p>
               I min rolle som teknisk tegner hos Bakaas Cad Consult produserer
               og oppdaterer jeg plantegninger og fag tegninger. En stor del av
-              arbeids dagen betår av tegning, fil behandling, organisjon og
-              komunikasjon med kunder.
+              arbeidsdagen består av tegning, fil behandling, organisasjon og
+              kommunikasjon med kunder.
             </p>
           </section>
 
           <section>
             <h3>(2016 - 2020) Teknisk tegner / konstruktør: Systemblokk</h3>
             <p>
-              Hos Systemblokk jobbet jeg tett på prosjetk ledere, arkitekter,
-              enginører, produksjons lederen og fabrikk arbeidere. Hverdagen min
-              besto hovedsakelig av selvstendig arbeid, komunisere med
-              medarbeidere, modellering og produksjon av produksjons tegninger
+              Hos Systemblokk jobbet jeg tett på prosjektledere, arkitekter,
+              ingeniører, produksjonsledere og fabrikkarbeidere. Hverdagen min
+              besto hovedsakelig av selvstendig arbeid, kommunisere med
+              medarbeidere, modellering og produksjon av produksjonstegninger
             </p>
           </section>
         </section>
@@ -158,32 +175,32 @@
 
             <p>
               Gjennom utdannelse min på GET Academy har jeg utviklet en
-              grunnlegende og solid kompetanse innenfor webutvikling, med
-              spesielt fokus på HTML, CSS og Javascript. Jeg har også lært å
-              anvende design patterns som MVC og prinsipper som DRY for å skape
-              moderne og funksjonelle nettsider.
+              grunnleggende og solid kompetanse innenfor fullstack utvikling,
+              med spesielt fokus på C# og React. Jeg har også lært å anvende
+              design patterns som MVC og prinsipper som DRY for å skape moderne
+              og funksjonelle applikasjoner.
             </p>
             <p>
-              Med denne bakgrunnen har jeg ett godt utgangspunkt til å bli ett
-              nyttig og produktivt medlem av ett hvert team.
+              Med denne bakgrunnen har jeg et godt utgangspunkt til å bli et
+              nyttig og produktivt medlem av ethvert team.
             </p>
           </section>
 
           <section>
             <h3>(2021 - 2022) Automasjon Vg2</h3>
             <p>
-              Dette var hvor jeg fant min interesse for programering. Dette
+              Dette var hvor jeg fant min interesse for programmering. Dette
               førte til en sommer hvor jeg lærte meg hvordan programmere med
-              Java og deretter at jeg startet på GET Academt.
+              Java og deretter at jeg startet på GET Academy.
             </p>
           </section>
 
           <section>
             <h3>(2016 - 2017) Elektro Vg2</h3>
             <p>
-              Etter ett havlt år fant jeg ut at jeg ikke var intresert i å være
-              en elektrikker og jeg var heldig nokk til å få ett jobb tilbud fra
-              Systemblokk der jeg hadde sommer jobb
+              Etter et halvt år fant jeg ut at jeg ikke var interessert i å være
+              en elektriker og jeg var heldig nok til å få et jobbtilbud fra
+              Systemblokk der jeg hadde sommerjobb
             </p>
           </section>
 
@@ -194,19 +211,17 @@
       </main>
 
       <aside>
-        <img src="" alt="" />
-
         <section>
-          <h2>Spørmål om søker?</h2>
-          <h3>Kontakt info</h3>
-          <p>Johnny@bakaas-cadconsult.no</p>
+          <h2>Spørsmål om meg?</h2>
+          <h3>Kontaktinfo</h3>
+          <p>Johnny@Bakaas-CadConsult.no</p>
           <p>Tlf: 907 32 947</p>
         </section>
 
         <section class="referanse">
           <h2>Referanser</h2>
           <h3>Gunnar Gravdal Aasland</h3>
-          <p>Stilling: Produksjons skjef</p>
+          <p>Stilling: Produksjonssjef</p>
           <p>Epost: gunnar@systemblokk.no</p>
           <p>Tlf: 406 92 340</p>
         </section>
@@ -214,14 +229,17 @@
         <section>
           <h2>Ferdigheter</h2>
 
-          <h3>Programering</h3>
+          <h3>Programmering</h3>
           <ul>
             <li>HTML, CSS og JS</li>
-            <li>THREE.js</li>
+            <li>React og TypeScript</li>
+            <li>C#/.NET</li>
+            <li>SQL</li>
             <li>Node.js</li>
             <li>GitHub</li>
+            <li>Rust</li>
             <li>Java</li>
-            <li>SQL</li>
+            <li>Python</li>
           </ul>
 
           <h3>Tegning</h3>
@@ -240,6 +258,7 @@
           <h3>Hobby / Interesser</h3>
           <ul>
             <li>Design</li>
+            <li>Elektronikk</li>
             <li>Bil</li>
             <li>Løfting</li>
             <li>Gaming</li>
