--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
         <nav>
           <p>Jobbsøker</p>
           <p>/</p>
-          <p>Frontend Developer</p>
+          <p>Fullstack Developer</p>
         </nav>
 
         <!-- Intro -->
